force-app/main/default/objects/Customer_Storage_Strategy_Group__c/Customer_Storage_Strategy_Group__c.object-meta.xml
<CustomObject>
    <label>Customer Storage Strategy Group</label>
    <nameField>
        <label>Customer Storage Strategy Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Storage Strategy Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>