force-app/main/default/objects/Customer_Storage_Strategy_Group__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Storage Strategy Groups</relationshipLabel>
    <relationshipName>Customer_Storage_Strategy_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>