force-app/main/default/objects/Customer_Storage_Strategy_Group__c/fields/Nomination_Group__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Group__c</fullName>
    <label>Nomination Group</label>
    <referenceTo>Nomination_Group__c</referenceTo>
    <relationshipLabel>Customer Storage Strategy Groups</relationshipLabel>
    <relationshipName>Customer_Storage_Strategy_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>