force-app/main/default/objects/Customer_Storage_Strategy_Group__c/fields/Safari_ID__c.field-meta.xml
<CustomField>
    <fullName>Safari_ID__c</fullName>
    <externalId>true</externalId>
    <label>Safari ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>