force-app/main/default/objects/Customer_Storage_Strategy_Group__c/fields/Storage_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Storage_Strategy__c</fullName>
    <label>Storage Strategy</label>
    <referenceTo>Storage_Strategy__c</referenceTo>
    <relationshipLabel>Customer Storage Strategy Groups</relationshipLabel>
    <relationshipName>Customer_Storage_Strategy_Groups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>