force-app/main/default/objects/Customer_Storage_Strategy_Group__c/fields/Unique_Customer_NomGroup__c.field-meta.xml
<CustomField>
    <fullName>Unique_Customer_NomGroup__c</fullName>
    <description>Safari key for uniqueness</description>
    <externalId>true</externalId>
    <inlineHelpText>Safari key for uniqueness</inlineHelpText>
    <label>Unique Customer+NomGroup</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>