force-app/main/default/objects/Customer_Storage_Strategy_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Nomination_Group__c</columns>
    <columns>Storage_Strategy__c</columns>
    <columns>Unique_Customer_NomGroup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>